fix language in content.opf, add nowrap style for abbr.name Fixes #7

--- a/src/epub/css/local.css
+++ b/src/epub/css/local.css
@@ -11,3 +11,7 @@ p[epub|type~="se:letter.dateline"] {
 p[epub|type~="se:letter.dateline"] + p:nth-child(2) {
 	text-indent: 0;
 }
+
+abbr.name {
+	white-space: nowrap;
+}
